# FACE-COLLECTOR-PACKAGE

./: .dockerignore  .gitignore  CLI_USAGE.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
face_collector/: __init__.py  main.py  main2.py
face_collector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
